# COS3711-lessons

./: README.md
lesson-1-exercise/: CMakeLists.txt  exercise.cpp  exercise.h  exercisereader.cpp  exercisereader.h  exercisewriter.cpp  exercisewriter.h  main.cpp
lesson-2-exercise/Qt-88-User-Feedback-QVariant/: CMakeLists.txt  main.cpp  myclass.h
lesson-2-exercise/ep-4-qobject-and-moc/: CMakeLists.txt  main.cpp  test.cpp  test.h
lesson-2-exercise/ep-5-QObjects-cannot-be-copied/: CMakeLists.txt  main.cpp
lesson-2-exercise/ep-6-parent-child-relationship/: CMakeLists.txt  main.cpp  test.cpp  test.h
lesson-2-exercise/ep-6-parent-child-relationships/: CMakeLists.txt  test.cpp  test.h
lesson-3-exercise/DirMod/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
lesson-3-exercise/Intro-to-model-view-programming/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
lesson-3-exercise/QItemDelegate/: CMakeLists.txt  delegate.cpp  delegate.h  dialog.cpp  dialog.h  dialog.ui
